--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_social_issues_in_the_design_and_manufacture_of_p.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_social_issues_in_the_design_and_manufacture_of_p.html
@@ -128,7 +128,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technic">Social issues in the design and manufacture of products Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B3/3.2.3_social_issues_in_design_and_manufacture_of_products.pdf">Social issues in the design and manufacture of products Questions</a>
                 </div> 
             </div>
         </div>
