--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/health_and_safety_laws_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/health_and_safety_laws_notes.html
@@ -7,7 +7,7 @@
 <body>
     <div class="containter">
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/healthandsafetylaws.jpg)" title="casting background">
+            <div class="notes-content-header" style="background-image:url(../../../../../../images/healthandsafetylaws.jpg)" title="casting background">
                 <h1 style="color:rgb(254, 249, 249)"><u><b>Health & Safety laws, regulations and impacts on the designing and making process</b></u></h1>
             </div>
 
