--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/woods_materials_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/woods_materials_notes.html
@@ -8,7 +8,7 @@
     <div class="containter"> 
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/matnote1.jpg)" title="wood background">
+            <div class="notes-content-header" style="background-image:url(../../../../../../images/matnote1.jpg)" title="wood background">
                 <h1><u><b>Woods</b></u></h1>
             </div>
 
