--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio2.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/energy_storage.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio12.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/systems_approach.png)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/finishing_cover.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/mechanical_devices.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/mechanical_devices.html">Topic 5: Mechanical devices</a>
