--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/new_and_emerging_technolgies.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/new_and_emerging_technolgies.html
@@ -74,7 +74,7 @@
                 </div>
                 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio6.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/cleanerTech.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
@@ -84,7 +84,7 @@
                 </div>      
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio6.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/mechanical_devices.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
@@ -94,7 +94,7 @@
                 </div>      
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio6.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/how_the_critical_evaluation.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
