--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/efficient_use_of_materials_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/efficient_use_of_materials_notes.html
@@ -6,9 +6,14 @@
 
 <body>
     <div class="container">
-        <div class="quote">
-            <h2>Efficient use of materials</h2>
-        </div>
+        
+        <div class="notes-content">
+            <div class="notes-content-subheader">
+            </div>
+            <div class="quote">
+                <h2>Efficient use of materials</h2>
+            </div>
+        
 
         <h3 id="MaterialCostFormAndManufacturing"><b><u>Relationship Between Material Cost, Form, and Manufacturing Processes:</u></b></h3>
         <ul>
