--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_the_modification_of_properties_for_specific_purp.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_the_modification_of_properties_for_specific_purp.html
@@ -98,7 +98,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_composite_materials.pdf">Composite materials Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B5/3.2.5_the_modification_of_properties_for_specific_purposes.pdf">The modifcation of properties for specifc purposes Questions</a>
                 </div> 
             </div>
         </div>
