--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_scales_of_production.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_scales_of_production.html
@@ -206,7 +206,7 @@
                     <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_composite_materials.pdf">Scales of production Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B7/3.2.7_scales_of_production.pdf">Scales of production Questions</a>
                 </div> 
             </div>
         </div>
