--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_stock_forms_types_and_sizes.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_stock_forms_types_and_sizes.html
@@ -398,7 +398,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/">Stock forms, types and sizes Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B6/3.2.6_stock_forms_types_and_sizes.pdf">Stock forms, types and sizes Questions</a>
                 </div> 
             </div>
         </div>
