--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_the_use_of_production_aids.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_the_use_of_production_aids.html
@@ -8,17 +8,27 @@
     <div class="containter">
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(/images/note_pic.jpg)" title="metal background">
-                <h1 style="color:rgb(0, 0, 0)"><u><b>Composite materials</b></u></h1>
+                <h1 style="color:rgb(0, 0, 0)"><u><b>The use of production aids</b></u></h1>
             </div>
 
             <div class="notes-content">
                 <div class="notes-content-subheader">
-                    <h2><hr>Composite material: produced by
-                        combining two or more different materials to create
-                        an enhanced materia<hr></h2>
                 </div>
 
-                <h3 id="GRP"><u><b>Glass reinforced plastic (GRP):</b></u></h3>
+                <h3 id="MeasurementPoints"><b><u>Measurement/Reference Points:</u></b></h3>
+                <h3>
+                    <ul>
+                        <li>Fixed points on a workpiece or workspace used to ensure consistent measuring, marking, and positioning</li>
+                    </ul>
+                </h3>
+
+
+                <h3 id="Templates"><b><u>Templates:</u></b></h3>
+                <h3>
+                    <ul>
+                        <li>A template is used to guide the marking out of shapes on materials</li>
+                    </ul>
+                </h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -27,50 +37,76 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Good strength to weight ratio</li>
-                                <li>Good tensile strength</li>
-                                <li>Can be repaired easily (patch kits etc)</li>
-                                <li>Corrosion resistant</li>
-                                <li>Durable</li>
+                                <li>Speeds up marking out process</li>
+                                <li>Ensures consistency across multiple pieces</li>
+                                <li>Easy to use and low cost to make</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Brittle/can shatter easily</li>
-                                <li>Not very heat resistant</li>                            
+                                <li>Not suitable for guiding tools – only marking</li>
+                                <li>Can wear out or become damaged over time</li>
+                                <li>Less accurate than jigs for detailed work</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Piping, boat hulls, fighter planes<br><br><br></h3>
 
 
-                <h3 id="Carbonfibre"><b><u>Carbonfibre reinforced plastic (CRP):</b></u></h3>
-                <table>
-                    <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
-                    </tr>
-                    <tr>
-                        <td class="notes-table-data-pro">
-                            <ul>
-                                <li>Lightweight</li>
-                                <li>High tensile strength</li>
-                                <li>Durable</li>
-                                <li>Corrosion resistant</li>
-                                <li>Good electrical conductor</li>
-                            </ul>
-                        </td>
-                        <td class="notes-table-data-con">
-                            <ul>
-                                <li>Can break/shatter</li>
-                                <li>Brittle</li>
-                                <li>Relatively expensive</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </table>
-                <h3><b>Uses: </b>F1 cars, bicycles, tennis rackets<br><br><br></h3>
+                <h3 id="Jigs"><b><u>Jigs:</b></u></h3>
+                <h3><ul>
+                        <li>A jig is used to control the motion of a tool</li>
+                    </ul></h3>
+                    <table>
+                        <tr class="notes-table-header">
+                            <th>Advantages</th>
+                            <th>Disadvantages</th>
+                        </tr>
+                        <tr>
+                            <td class="notes-table-data-pro">
+                                <ul>
+                                    <li>Increase rate of production</li>
+                                    <li>Allow for repeatable accuracy</li>
+                                    <li>Requires little skill to use</li>
+                                </ul>
+                            </td>
+                            <td class="notes-table-data-con">
+                                <ul>
+                                <li>Jig must be bought/created before it can be used</li>
+                                    <li>Only suitable for low volume/batch production</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <h3 id="Patterns"><b><u>Patterns:</u></b></h3>
+                    <h3>
+                        <ul>
+                            <li>A pattern is used to create a mould cavity in sand casting</li>
+                        </ul>
+                    </h3>
+                    <table>
+                        <tr class="notes-table-header">
+                            <th>Advantages</th>
+                            <th>Disadvantages</th>
+                        </tr>
+                        <tr>
+                            <td class="notes-table-data-pro">
+                                <ul>
+                                    <li>Can be reused multiple times</li>
+                                    <li>Enables consistent and accurate moulds</li>
+                                    <li>Useful for complex shapes</li>
+                                </ul>
+                            </td>
+                            <td class="notes-table-data-con">
+                                <ul>
+                                    <li>Requires time and effort to make the pattern</li>
+                                    <li>Pattern wear can affect accuracy over time</li>
+                                    <li>More suitable for batch than mass production</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
 
                 
 
@@ -79,7 +115,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_composite_materials.pdf">Composite materials Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/">The use of production aids Questions</a>
                 </div> 
             </div>
         </div>
