--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_how_materials_are_cut_shaped_and_formed_to_a_tol.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_how_materials_are_cut_shaped_and_formed_to_a_tol.html
@@ -47,7 +47,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/">How materials are cut shaped and formed to a tolerance Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B8/3.2.8_how_materials_are_cut_shaped_and_formed_to_a_tolerance.pdf">How materials are cut shaped and formed to a tolerance Questions</a>
                 </div> 
             </div>
         </div>
