--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/wood_enhancement_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/wood_enhancement_notes.html
@@ -132,7 +132,7 @@
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Hardwoods and sodtwoods<br><br></h3>
+                <h3><b>Uses: </b>Hardwoods and softwoods<br><br></h3>
 
                 
     
