--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html
@@ -176,8 +176,8 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="\documents\Q&A\pcom_exercises\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials Questions</a>
-                </div>
+                    <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A1/3.1.1_materials_and_their_applications.pdf">Methods for investigating and testing materials Questions</a>
+                </div> 
             </div>
         </div>
 
