--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/paper_a_board_finishing_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/paper_a_board_finishing_notes.html
@@ -215,12 +215,11 @@
 
                     <div class="notes-content">
                         <div class="notes-content-intro">
-<!-- 
                             <h3><b>Topic test:</b></h3>
 
                             This is a comment div class="blurbox" style="background-color: #bdbdbd;">
-                                <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf">Metal processes Questions</a>
-                            </div> -->
+                                <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A5/3.1.5_paper_and_board_finishing.pdf">Paper and board finishing Questions</a>
+                            </div>
                         </div>
                     </div>
 
