--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/the_use_of_finishes.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/the_use_of_finishes.html
@@ -7,7 +7,7 @@
 <body>
     <div class="containter"> 
         <div class="quote">
-            <h2>Safe Working Practices</h2>
+            <h2>The use of finishes</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes">
@@ -16,7 +16,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote5.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/paper_a_board_finishing_notes.html">Paper and board finishing</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A5/3.1.5_paper_and_board_finishing.pdf">Paper and board finishing</a>
                         </div>
                     </div>
                 </div>
