--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/paper_a_board_printing_processes_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/paper_a_board_printing_processes_notes.html
@@ -184,7 +184,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Printing_Q&A.pdf">Printing Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A5/3.1.5_paper_and_board_printing_processes.pdf">Paper and board printing processes Questions</a>
                 </div> 
             </div>
         </div>
