--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/polymer_finishing_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/polymer_finishing_notes.html
@@ -127,7 +127,7 @@
                     <h3><b>Topic test:</b></h3>
     
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="..\..\..\documents\Q&A\Materials\&A.pdf">Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A5/3.1.5_polymer_finishing.pdf">Polymer finishing Questions</a>
                     </div>
 
             
