--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/the_use_of_finishes.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/the_use_of_finishes.html
@@ -34,7 +34,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/polymer_finishing_notes.html">Polymer finishing</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A5/3.1.5_polymer_finishing.pdf">Polymer finishing</a>
                         </div>
                     </div>
                 </div>
