--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/metal_finishing_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/metal_finishing_notes.html
@@ -380,7 +380,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf">Metal finishing Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A5/3.1.5_metal_finishing.pdf">Metal finishing Questions</a>
                 </div> 
             </div>
         </div>
