--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/wood_finishing_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/wood_finishing_notes.html
@@ -237,7 +237,7 @@
                     <h3><b>Topic test:</b></h3>
     
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf">Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A5/3.1.5_wood_finishing.pdf">Wood finishing Questions</a>
                     </div> 
                 </div>
             </div>
