--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/manufacture_repair_main_a_dispo_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/manufacture_repair_main_a_dispo_notes.html
@@ -142,7 +142,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf">Manufacture & Sustainability Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A11/3.1.11_manufacture_repair_maintenance_and_disposal.pdf">Manufacture, repair, maintenance and disposal Questions</a>
                 </div>
             </div>
         </div>
