--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/ease_of_manufacture_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/ease_of_manufacture_notes.html
@@ -11,6 +11,8 @@
         </div>
 
         <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <div class="notes-content">
+                <div class="notes-content-intro">            
             <tr style="background-color: #d9d9d9;">
                 <th>Design Feature</th>
                 <th>Purpose</th>
@@ -236,6 +238,12 @@
                 </td>
             </tr>
         </table><br><br>
+
+        <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A11/3.1.11_ease_of_manufacture.pdf">Ease of manufacture Questions</a>
+                </div>
 
     </div>
     
