--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/disassembly_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/disassembly_notes.html
@@ -4,11 +4,16 @@
         <script src="/head.js" defer></script>
     </head>
 
-<body>
-    <div class="container"> 
-        <div class="quote">
-            <h2>Disassembly</h2>
-        </div>
+    <body>
+        <div class="containter"> 
+            <div class="notes-content-wrapper">
+                <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_heattreatment.jpg)" title="heat treatment background">
+                    <h1 style="color:white"><u><b>Disassembly</b></u></h1>
+                </div>
+    
+                <div class="notes-content">
+                    <div class="notes-content-intro">
+                    </div>
         
         <div class="notes-content-subheader">
             <h2><hr>Introduction to Design for Disassembly:<hr></h2>
