--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/aqa_alevel_exercises.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/aqa_alevel_exercises.html
@@ -12,8 +12,8 @@
 
         <!-- Search bar section -->
         <div class="search-container" style="background-color: rgb(255, 255, 255);">
-            <input type="text" id="searchInput" placeholder="Search for topics...">
-            <button onclick="search()">Search</button>
+            <input type="text" id="searchInput" placeholder="Search for questions by topics...">
+            <button id="searchButton">Search</button>
         </div>
         <ul id="searchResults"></ul>
 
@@ -54,5 +54,5 @@
     </style>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="/script.js"></script>
+<script src="/scripts/aqa_alevel_searchenginequestions.js"></script>
 </html>
